--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: 'Loonpic'
 description: 'Loonpic Project'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
-baseurl: 'https://loonpic.github.io/'
+baseurl: ''
 avatar: 'assets/images/sal.jpg'
 disqus: 'Photograph / Filmaker'
 email: 'lnoering@gmail.com'
