--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,20 @@ highlighter: rouge
 # Pagination
 paginate: 20
 
+excerpt_separator: ""
 
 # Exclude metadata and development time dependencies (like Grunt plugins)
-exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
+exclude: [
+  README.markdown, 
+  package.json, 
+  grunt.js, 
+  Gruntfile.js, 
+  Gruntfile.coffee, 
+  node_modules,
+  Gemfile,
+  Gemfile.lock,
+  vendor/bundle/,
+  vendor/cache/,
+  vendor/gems/,
+  vendor/ruby/
+]
