changing repo name.

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: 'Loonpic'
 description: 'Loonpic Project'
 logo: 'assets/images/logo/F0001_logo.png'
 favicon: 'assets/images/favicon/favicon.ico'
-baseurl: ''
+baseurl: '/loonpic'
 avatar: 'assets/images/avatar/F0001_avatar.png'
 disqus: 'Photograph / Filmaker'
 email: 'lnoering@gmail.com'
